--- a/css/ui.css
+++ b/css/ui.css
@@ -5,6 +5,30 @@ body{
 	font-family: 'Poppins';
 	padding-bottom: 200px;
 }
+.verifiedBox{
+	z-index: 1;
+}
+.verifiedBox::before {
+	position: absolute;
+	right: -10px;
+	top: 0;
+	width: 110%;
+	height: 100%;
+	content: "";
+	background: #fff;
+	transform: skew(20deg);
+	animation: shineSho 3s ease forwards 2s; 
+	z-index: 1;
+	filter: blur(4px);
+}
+@keyframes shineSho{
+	0%{
+		width: 100%;
+	}
+  100%{
+		width: 0%;
+	}
+}
 .content{
 	width: 100%;
 }
