--- a/css/ui.css
+++ b/css/ui.css
@@ -39,6 +39,7 @@ body{
 	background: #f1f1ff;
 	border-radius: 13px;
 	margin: 10px;
+	box-shadow: 0 1px 45px #0005;
 }
 .content .appPan .appBox .appInfo{
 	width: 100%;
