--- a/css/ui.css
+++ b/css/ui.css
@@ -38,7 +38,7 @@ body{
 	height: max-content;
 	background: #f1f1ff;
 	border-radius: 13px;
-	margin: 10px;
+	margin: 30px 10px;
 	box-shadow: 0 1px 45px #0005;
 }
 .content .appPan .appBox .appInfo{
@@ -61,13 +61,17 @@ body{
 	justify-content: flex-start;
 }
 .content .appPan .appBox .appDetail{
-	padding: 0 10px;
-	background: #fff;
 	margin: 5px;
 	border-radius: 5px;
 	color: #444;
 	font-size: .9em;
-	padding-top: 10px;
+}
+.content .appPan .appBox .appDetail .btnPan button{
+	margin: 2px 5px;
+	border-radius: 2px;
+	color: #555;
+	padding: 10px;
+	font-size: 1.3em;
 }
 .content .appPan .appBox .appDetail ul{
 	margin-left: 30px;
